--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^8.1.2",
         "advoor/nova-editor-js": "^2.0.3",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "benjacho/belongs-to-many-field": "^1.9",
-        "bref/bref": "^0.5.31",
-        "bref/laravel-bridge": "^0.2.2",
+        "bref/bref": "^1.5.5",
+        "bref/laravel-bridge": "^1.2.0",
         "coderello/laravel-nova-lang": "^1.6",
         "czemu/nova-calendar-tool": "^1.3",
         "digital-creative/nova-filepond": "^0.2.13",
@@ -141,7 +141,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/thanks": true
+        }
     },
     "extra": {
         "laravel": {
