Changed flow of editing Courses > Topics > Activities.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
         "build-files-prod": "cd nova-components/Files && npm run prod",
         "build-link-file": "cd nova-components/LinkFile && npm run dev",
         "build-link-file-prod": "cd nova-components/LinkFile && npm run prod",
-        "build-teacher-topic-comment": "cd nova-components/TeacherTopicComment && npm run dev",
-        "build-teacher-topic-comment-prod": "cd nova-components/TeacherTopicComment && npm run prod",
+        "build-teacher-topic-comment": "cd nova-components/TeacherTopicComment && npm i && npm run dev",
+        "build-teacher-topic-comment-prod": "cd nova-components/TeacherTopicComment && npm i && npm run prod",
         "build-studentGradebook": "cd nova-components/StudentGradebook && npm run dev",
         "build-studentGradebook-prod": "cd nova-components/StudentGradebook && npm run prod",
         "build-student-gradebook": "cd nova-components/StudentGradebook && npm run dev",
