--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
+FILESYSTEM_DRIVER=local
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
