--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1.2",
+        "addgod/nova-nested-breadcrumbs": "^1.0",
         "advoor/nova-editor-js": "^2.0.3",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "benjacho/belongs-to-many-field": "^1.9",
         "bref/bref": "^1.5.5",
         "bref/laravel-bridge": "^1.2.0",
+        "chris-ware/nova-breadcrumbs": "^2.3",
         "coderello/laravel-nova-lang": "^1.6",
         "czemu/nova-calendar-tool": "^1.3",
         "digital-creative/nova-filepond": "^0.2.13",
