Upgraded to Vue v3, Laravel Jetstream

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "genealabs/nova-file-upload-field": "^0.4.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.2.11",
+        "inertiajs/inertia-laravel": "0.5.4",
         "infinety-es/nova-filemanager": "^2.8",
         "izi-dev/nova-key-value-suggestion-field": "^1.0",
         "joedixon/nova-translation": "^1.0",
@@ -40,7 +40,7 @@
         "khalin/nova-link-field": "^1.2",
         "kpolicar/nova-date-range": "9999999-dev",
         "laravel/framework": "^8.16.1",
-        "laravel/jetstream": "^1.1",
+        "laravel/jetstream": "2.7.4",
         "laravel/nova": "~3.27.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
@@ -70,6 +70,7 @@
         "spatie/nova-tags-field": "^3.0",
         "superlatif/nova-tag-input": "^1.4",
         "test/test": "*",
+        "tightenco/ziggy": "^1.4",
         "vyuldashev/nova-permission": "^2.9",
         "whchi/nova-tags-input": "^0.0.5",
         "whitecube/nova-flexible-content": "^0.2.5",
