--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production": "mix --production",
         "build-activity-scores": "cd nova-components/ActivityScores && npm run dev",
         "build-activity-scores-prod": "cd nova-components/ActivityScores && npm run prod",
         "build-test": "cd nova-components/Test && npm run dev",
@@ -43,22 +43,28 @@
         "@editorjs/attaches": "^1.1.0",
         "@editorjs/simple-image": "^1.4.1",
         "@editorjs/table": "^1.3.0",
-        "@inertiajs/inertia": "^0.1.7",
-        "@inertiajs/inertia-vue": "^0.1.2",
-        "@tailwindcss/ui": "^0.1.3",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@tailwindcss/forms": "^0.5.0",
+        "@tailwindcss/typography": "^0.5.2",
+        "@vue/compiler-sfc": "^3.2.33",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-echo": "^1.10.0",
-        "laravel-jetstream": "^0.0.3",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
-        "postcss-import": "^12.0.1",
+        "postcss": "^8.4.12",
+        "postcss-import": "^14.1.0",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^1.3.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "tailwindcss": "^3.0.24",
+        "vue": "^3.2.33",
+        "vue-loader": "^17.0.0",
+        "webpack": "^5.72.0",
+        "webpack-cli": "^4.9.2",
+        "ziggy-js": "^1.4.6"
     },
     "dependencies": {
         "@ashwamegh/vue-link-preview": "^0.2.5",
@@ -66,20 +72,17 @@
         "@editorjs/header": "^2.6.1",
         "@editorjs/nested-list": "^1.0.1",
         "@editorjs/underline": "^1.0.0",
-        "@inertiajs/inertia": "^0.2.3",
-        "@inertiajs/inertia-vue": "^0.2.3",
         "link-preview-js": "^2.1.6",
         "link-preview-node": "^1.0.7",
         "pdfvuer": "^1.7.1",
         "serverless": "^2.10.0",
-        "tailwindcss": "^1.8.8",
-        "vue": "^2.6.12",
-        "vue-cal": "^3.10.1",
+        "tailwindcss": "^3.0.24",
+        "vue-cal": "^4.2.0",
         "vue-confirm-dialog": "^1.0.2",
         "vue-file-agent": "^1.7.3",
         "vue-moment": "^4.1.0",
         "vue-notification": "^1.3.20",
-        "vue-pdf": "^4.1.0",
-        "vue2-editor": "^2.10.2"
+        "vue-pdf": "^4.3.0",
+        "vue3-editor": "^0.1.1"
     }
 }
