--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "khalin/nova-link-field": "^1.2",
         "kpolicar/nova-date-range": "9999999-dev",
         "laravel/framework": "^8.16.1",
-        "laravel/jetstream": "2.7.4",
+        "laravel/jetstream": "^2.7",
         "laravel/nova": "~3.27.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
@@ -74,7 +74,9 @@
         "vyuldashev/nova-permission": "^2.9",
         "whchi/nova-tags-input": "^0.0.5",
         "whitecube/nova-flexible-content": "^0.2.5",
-        "yassi/nova-nested-form": "^3.0"
+        "yassi/nova-nested-form": "^3.0",
+        "Test/TestTool": "*",
+        "Test/TestResourceTool": "*"
     },
     "repositories": [
         {
@@ -132,6 +134,14 @@
         {
             "type": "path",
             "url": "./nova-components/Test"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/TestTool"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/TestResourceTool"
         }
     ],
     "require-dev": {
