--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
         "build-notices": "cd nova-components/Notices && npm run dev",
         "build-notices-prod": "cd nova-components/Notices && npm run prod",
         "build-course-gradebook": "cd nova-components/CourseGradebook && npm run dev",
-        "build-course-gradebook-prod": "cd nova-components/CourseGradebook && npm run prod"
+        "build-course-gradebook-prod": "cd nova-components/CourseGradebook && npm run prod",
+        "build-TestTool": "cd nova-components/TestTool && npm run dev",
+        "build-TestTool-prod": "cd nova-components/TestTool && npm run prod",
+        "build-TestResourceTool": "cd nova-components/TestResourceTool && npm run dev",
+        "build-TestResourceTool-prod": "cd nova-components/TestResourceTool && npm run prod"
     },
     "devDependencies": {
         "@editorjs/attaches": "^1.1.0",
@@ -46,6 +50,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "@jbtje/vue3pdf": "^2.0.0",
         "@tailwindcss/forms": "^0.5.0",
         "@tailwindcss/typography": "^0.5.2",
         "@vue/compiler-sfc": "^3.2.33",
@@ -54,7 +59,6 @@
         "laravel-echo": "^1.10.0",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
-        "portal-vue": "^2.1.7",
         "postcss": "^8.4.12",
         "postcss-import": "^14.1.0",
         "pusher-js": "^7.0.3",
@@ -74,15 +78,11 @@
         "@editorjs/underline": "^1.0.0",
         "link-preview-js": "^2.1.6",
         "link-preview-node": "^1.0.7",
-        "pdfvuer": "^1.7.1",
         "serverless": "^2.10.0",
         "tailwindcss": "^3.0.24",
         "vue-cal": "^4.2.0",
-        "vue-confirm-dialog": "^1.0.2",
         "vue-file-agent": "^1.7.3",
         "vue-moment": "^4.1.0",
-        "vue-notification": "^1.3.20",
-        "vue-pdf": "^4.3.0",
         "vue3-editor": "^0.1.1"
     }
 }
