--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     },
     "dependencies": {
         "@ashwamegh/vue-link-preview": "^0.2.5",
+        "@coreui/coreui": "^4.1.3",
+        "@coreui/vue": "^4.2.0",
         "@editorjs/editorjs": "^2.22.0",
         "@editorjs/header": "^2.6.1",
         "@editorjs/nested-list": "^1.0.1",
