Add Google and Microsoft integration.

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OAUTH_GOOGLE_CLIENT=""
+OAUTH_GOOGLE_SECRET=""
+OAUTH_MICROSOFT_CLIENT=""
+OAUTH_MICROSOFT_SECRET=""
