--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "laravel/jetstream": "^2.7",
         "laravel/nova": "~3.27.0",
         "laravel/sanctum": "^2.6",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "lms/activity-comments": "*",
@@ -66,6 +67,8 @@
         "optimistdigital/nova-tailwind": "^1.0",
         "phoenix-lib/nova-nested-tree-attach-many": "^1.7",
         "pusher/pusher-php-server": "^6.1",
+        "socialiteproviders/google": "^4.1",
+        "socialiteproviders/microsoft": "^4.1",
         "spatie/nova-backup-tool": "^4.0",
         "spatie/nova-tags-field": "^3.0",
         "superlatif/nova-tag-input": "^1.4",
