Add dockerfile from https://github.com/exaco/laravel-octane-dockerfile.

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "laravel/framework": "^8.16.1",
         "laravel/jetstream": "^2.7",
         "laravel/nova": "~3.27.0",
+        "laravel/octane": "^1.2",
         "laravel/sanctum": "^2.6",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.0",
@@ -71,6 +72,7 @@
         "socialiteproviders/microsoft": "^4.1",
         "spatie/nova-backup-tool": "^4.0",
         "spatie/nova-tags-field": "^3.0",
+        "spiral/roadrunner": "2.8.2",
         "superlatif/nova-tag-input": "^1.4",
         "test/test": "*",
         "tightenco/ziggy": "^1.4",
