--- a/deployment/octane/supervisord.app.conf
+++ b/deployment/octane/supervisord.app.conf
@@ -6,7 +6,7 @@ pidfile=/var/run/supervisord.pid
 
 [program:octane]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan octane:start --server=swoole --host=0.0.0.0 --port=9000 --workers=auto --task-workers=auto --max-requests=500
+command=php /var/www/html/artisan octane:start --server=roadrunner --host=0.0.0.0 --port=8010 --workers=auto --task-workers=auto --max-requests=500
 user=octane
 autostart=true
 autorestart=true
@@ -16,10 +16,15 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:scheduler]
+[program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=supercronic /etc/supercronic/laravel
-user=octane
-autostart=%(ENV_APP_WITH_SCHEDULER)s
+command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+autostart=true
 autorestart=true
-stdout_logfile=/var/www/html/scheduler.log
+stopasgroup=true
+killasgroup=true
+user=octane
+numprocs=8
+redirect_stderr=true
+stdout_logfile=/var/www/html/worker.log
+stopwaitsecs=3600
