--- a/deployment/octane/supervisord.app.conf
+++ b/deployment/octane/supervisord.app.conf
@@ -11,10 +11,8 @@ user=octane
 autostart=true
 autorestart=true
 environment=LARAVEL_OCTANE="1"
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+redirect_stderr=true
+stdout_logfile=/var/www/html/octane.log
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
