Removed Nova translation.

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -25,8 +25,8 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    access_log /var/log/nginx/octane-access.log main;
-    error_log  /var/log/nginx/octane-error.log error;
+    access_log /var/log/nginx/octane-access.log;
+    error_log  /var/log/nginx/octane-error.log;
 
     error_page 404 /index.php;
 
@@ -46,6 +46,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        proxy_ pass  http://127.0.0.1:8010 $suffix;            #  Proxy request
+        proxy_pass  http://127.0.0.1:8010$suffix;            #  Proxy request
     }
 }
