--- a/composer.json
+++ b/composer.json
@@ -177,6 +177,12 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+        "pre-install-cmd": [
+            "@composer config http-basic.nova.laravel.com ${NOVA_USERNAME} ${NOVA_PASSWORD}"
+        ],
+        "pre-update-cmd": [
+            "@composer run pre-install-cmd"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
