--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1.4",
         "addgod/nova-nested-breadcrumbs": "^1.0",
         "advoor/nova-editor-js": "^2.0.3",
         "barryvdh/laravel-dompdf": "^0.8.7",
@@ -178,10 +178,10 @@
             "@php artisan package:discover --ansi"
         ],
         "pre-install-cmd": [
-            "@composer config http-basic.nova.laravel.com ${NOVA_USERNAME} ${NOVA_PASSWORD}"
+            "@composer config http-basic.nova.laravel.com $NOVA_USERNAME $NOVA_PASSWORD"
         ],
         "pre-update-cmd": [
-            "@composer run pre-install-cmd"
+            "@composer run-script pre-install-cmd"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
