--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         "optimistdigital/nova-tailwind": "^1.0",
         "phoenix-lib/nova-nested-tree-attach-many": "^1.7",
         "pusher/pusher-php-server": "^6.1",
+        "sentry/sentry-laravel": "^2.12",
         "socialiteproviders/google": "^4.1",
         "socialiteproviders/microsoft": "^4.1",
         "spatie/nova-backup-tool": "^4.0",
