Added completed attribute to activities and improved navigation.

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@ OAUTH_GOOGLE_CLIENT=""
 OAUTH_GOOGLE_SECRET=""
 OAUTH_MICROSOFT_CLIENT=""
 OAUTH_MICROSOFT_SECRET=""
+
+GOOGLE_ANALYTICS_TAG=""
+
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
