--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "0.5.4",
+        "inertiajs/inertia-laravel": "^0.6.0",
         "itsmejoshua/novaspatiepermissions": "^1.0",
         "laravel/framework": "^8.16.1",
-        "laravel/jetstream": "^2.7",
+        "laravel/jetstream": "^2.8.1",
         "laravel/nova": "^4.0",
         "laravel/octane": "^1.2",
         "laravel/sanctum": "^2.6",
