--- a/composer.json
+++ b/composer.json
@@ -78,12 +78,13 @@
         }
     ],
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.9.1",
+        "joshgaber/novaunit": "^3.0",
         "laravel/dusk": "^6.24",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
