--- a/package.json
+++ b/package.json
@@ -32,18 +32,19 @@
         "@tailwindcss/forms": "^0.5.0",
         "@tailwindcss/typography": "^0.5.2",
         "@vue/compiler-sfc": "^3.2.33",
-        "axios": "^0.19",
+        "autoprefixer": "10.4.5",
+        "axios": "^0.27.2",
         "chokidar": "^3.5.3",
         "cross-env": "^7.0",
         "jquery": "^3.6.0",
         "laravel-echo": "^1.10.0",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.12",
+        "postcss": "^8.4.14",
         "postcss-import": "^14.1.0",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^3.0.24",
+        "tailwindcss": "^3.1.4",
         "vue": "^3.2.33",
         "vue-loader": "^17.0.0",
         "webpack": "^5.72.0",
@@ -59,9 +60,7 @@
         "@editorjs/nested-list": "^1.0.1",
         "@editorjs/underline": "^1.0.0",
         "link-preview-js": "^2.1.6",
-        "link-preview-node": "^1.0.7",
-        "serverless": "^2.10.0",
-        "tailwindcss": "^3.0.24",
+        "link-preview-node": "^1.0.4",
         "vue-cal": "^4.2.0",
         "vue-file-agent": "^1.7.3",
         "vue-moment": "^4.1.0",
