Added button styling and removed gradebooks.

--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
         "@editorjs/header": "^2.6.1",
         "@editorjs/nested-list": "^1.0.1",
         "@editorjs/underline": "^1.0.0",
+        "flowbite": "^1.4.7",
         "link-preview-js": "^2.1.6",
         "link-preview-node": "^1.0.4",
+        "pluralize": "^8.0.0",
         "vue-cal": "^4.2.0",
         "vue-file-agent": "^1.7.3",
         "vue-moment": "^4.1.0",
