--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "vue-cal": "^4.2.0",
         "vue-file-agent": "^1.7.3",
         "vue-moment": "^4.1.0",
+        "vue-screen": "^2.1.0-beta.1",
         "vue3-editor": "^0.1.1"
     }
 }
