--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "chelout/laravel-relationship-events": "^1.5",
         "chris-ware/nova-breadcrumbs": "^2.3",
         "eminiarts/nova-tabs": "^2.0",
+        "formfeed-uk/nova-breadcrumbs": "^1.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.6.0",
@@ -36,18 +37,18 @@
         "lms/teacher-topic-comment": "*",
         "maatwebsite/excel": "^3.1.40",
         "monaye/simple-link-button": "^1.0",
+        "outl1ne/nova-settings": "^5.0",
         "phoenix-lib/nova-nested-tree-attach-many": "^1.7",
         "pixelcreation/nova-field-sortable": "^3.0.0",
         "pusher/pusher-php-server": "^6.1",
         "sentry/sentry-laravel": "^2.12",
-        "slash2nl/nova-back-button": "^2.0",
         "socialiteproviders/google": "^4.1",
         "socialiteproviders/microsoft": "^4.1",
         "spatie/eloquent-sortable": "^4.0.1",
+        "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-permission": "^5.5",
         "spatie/nova-backup-tool": "^5.0.1",
         "spatie/nova-tags-field": "^4.0.3",
-        "stepanenko3/nova-settings": "^1.0",
         "tightenco/ziggy": "^1.4",
         "wdelfuego/nova-datetime": "^1.1",
         "whitecube/nova-flexible-content": "^1.0.0"
