--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.6.0",
         "itsmejoshua/novaspatiepermissions": "^1.0",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "9.19.0",
         "laravel/jetstream": "^2.8.1",
         "laravel/nova": "^4.0",
         "laravel/octane": "^1.2",
