--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production",
+        "dev": "vite",
+        "build": "vite build",
+        "prod": "npm run build",
         "build-activity-scores": "cd nova-components/ActivityScores && npm run dev",
         "build-activity-scores-prod": "cd nova-components/ActivityScores && npm run prod",
         "build-activity-comments": "cd nova-components/ActivityComments && npm run dev",
@@ -31,6 +27,7 @@
         "@jbtje/vue3pdf": "^2.0.0",
         "@tailwindcss/forms": "^0.5.0",
         "@tailwindcss/typography": "^0.5.2",
+        "@vitejs/plugin-vue": "^2.3.3",
         "@vue/compiler-sfc": "^3.2.33",
         "autoprefixer": "10.4.5",
         "axios": "^0.27.2",
@@ -38,13 +35,14 @@
         "cross-env": "^7.0",
         "jquery": "^3.6.0",
         "laravel-echo": "^1.10.0",
-        "laravel-mix": "^6.0.43",
+        "laravel-vite-plugin": "^0.2.4",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "postcss-import": "^14.1.0",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^3.1.4",
+        "vite": "^2.9.13",
         "vue": "^3.2.33",
         "vue-loader": "^17.0.0",
         "webpack": "^5.72.0",
